feat(ui): add server IP auto-detection for OAuth callback
- Auto-detect and prefill callback server address field
- Add /server/info endpoint to retrieve server IP addresses
- Improve OAuth callback response page styling
- Bump version to 1.0.3

--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -259,8 +259,8 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label class="form-label">Callback Server Address *</label>
-                                <input type="text" class="form-input" id="callbackServerExternalAddress" placeholder="e.g., 192.168.1.100">
-                                <div class="form-hint">Your Homebridge server's IP or domain</div>
+                                <input type="text" class="form-input" id="callbackServerExternalAddress" placeholder="Auto-detecting...">
+                                <div class="form-hint">Your Homebridge server's IP (auto-detected, do not use .local domains)</div>
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Callback Server Port</label>
