--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -104,7 +104,7 @@
                                         <small class="text-muted">Boost heating/cooling performance</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showPowerfulMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showPowerfulMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -113,7 +113,7 @@
                                         <small class="text-muted">Energy-saving operation</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showEconoMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showEconoMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -122,7 +122,7 @@
                                         <small class="text-muted">Air purification</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showStreamerMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showStreamerMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -131,7 +131,7 @@
                                         <small class="text-muted">Reduce outdoor unit noise</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showOutdoorSilentMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showOutdoorSilentMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -140,7 +140,7 @@
                                         <small class="text-muted">Quiet fan operation</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showIndoorSilentMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showIndoorSilentMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -149,7 +149,7 @@
                                         <small class="text-muted">Dehumidification</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showDryMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showDryMode">
                                     </div>
                                 </div>
                                 <div class="list-group-item d-flex justify-content-between align-items-center">
@@ -158,7 +158,7 @@
                                         <small class="text-muted">Fan without heating/cooling</small>
                                     </div>
                                     <div class="form-check form-switch mb-0">
-                                        <input class="form-check-input" type="checkbox" id="showFanOnlyMode">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="showFanOnlyMode">
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="mb-0 d-none" id="websocket-setting-row">
                                 <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="enableWebSocket" checked>
+                                    <input class="form-check-input" type="checkbox" role="switch" id="enableWebSocket" checked>
                                     <label class="form-check-label" for="enableWebSocket">
                                         <span class="fw-medium">Enable WebSocket</span>
                                         <br><small class="text-muted">Real-time updates (Mobile App only)</small>
