--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Daikin Cloud</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -520,6 +521,7 @@
 
     <div id="global-error" class="toast-container position-fixed top-0 start-50 translate-middle-x p-3 d-none"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
