refactor(ui): change devices display from grid to list
- Replaced card grid with list-group for devices
- Simplified device item layout with inline stats
- Removed unused device-card and device-feature-tag CSS

--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -60,7 +60,7 @@
                     <div class="spinner-border spinner-border-sm mb-2" role="status"></div>
                     <p class="mb-0">Loading devices...</p>
                 </div>
-                <div id="devices-list" class="row g-3"></div>
+                <div id="devices-list" class="list-group"></div>
                 <div id="devices-empty" class="text-center py-5 d-none">
                     <div class="fs-1 mb-2 opacity-50">📱</div>
                     <p class="mb-1">No devices found</p>
