--- a/homebridge-ui/public/index.html
+++ b/homebridge-ui/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="auto">
 <head>
+    <script>
+        // Auto-detect dark mode preference
+        if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            document.documentElement.setAttribute('data-bs-theme', 'dark');
+        }
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+            document.documentElement.setAttribute('data-bs-theme', e.matches ? 'dark' : 'light');
+        });
+    </script>
     <title>Daikin Cloud</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
